update-show DaoProposol

--- a/專案啟動說明.md
+++ b/專案啟動說明.md
@@ -44,7 +44,8 @@
     ```
 6.  執行整合部署腳本，此腳本會將 `EduDAO` 和 `FundraiserFactory` 合約部署並正確地關聯起來：
     ```bash
-    forge script script/DeployDAO.s.sol --rpc-url http://127.0.0.1:8545 --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --broadcast
+    forge script script/DeployAll.s.sol --rpc-url http://localhost:8545 --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --broadcast
+
     ```
     > **重要：** 執行成功後，終端機會顯示新部署的合約地址。請複製 `EduDAO` 和 `FundraiserFactory` 的地址，並手動更新到前端設定檔 `Web/edu-support-app/src/edu-support/abi/FundraiserFactory-addr.json` 和一個**新的** `Web/edu-support-app/src/edu-support/abi/EduDAO-addr.json` 檔案中。
     > 同時，每次部署後，都需要將最新的 ABI 檔案從 `Solidity/edu-support/out/` 目錄複製到前端的 `Web/edu-support-app/src/edu-support/abi/` 目錄下。
