--- a/專案啟動說明.md
+++ b/專案啟動說明.md
@@ -1,5 +1,7 @@
 # EduDAO 專案啟動說明
 
+> **重要通知：** 由於智能合約的邏輯已更新 (加入了 `checkIfVoted` 函式)，請務必在啟動專案前，**完整執行一次視窗二的指令**，以重新編譯及部署合約。這會產生新的合約 ABI，接著再執行 `node go.cjs` 即可確保前端能正確對接。
+
 本文件旨在提供在本地開發環境中啟動、部署及運行 EduDAO 專案的完整步驟。
 
 ---
@@ -52,6 +54,7 @@
     > - `FundraiserFactory.sol/FundraiserFactory.json` -> `FundraiserFactory-abi.json`
     > - `Fundraiser.sol/Fundraiser.json` -> `Fundraiser-abi.json`
 
+> **自動化腳本提醒：** 為簡化上述手動複製的步驟，專案內已提供 `go.cjs` 腳本。部署完合約後，**強烈建議**直接執行 `node go.cjs` 來自動同步所有 ABI 與合約地址。
 
 ---
 
@@ -68,14 +71,13 @@
     ```bash
     npm install
     ```
-4.  安裝其他套件(照老師講義)
+4.  **(可選) 照老師講義安裝其他套件(若有缺漏):**
     ```bash
-    npm install react-router-dom @mui/material @emotion/react @emotion/styled web3 cryptocompare big-integer ethers
+    npm install react-router-dom @mui/material @emotion/react @emotion/styled web3 cryptocompare big-integer ethers @mui/icons-material
     ```
-    > **注意：** 在部署完智能合約後，請記得執行 `node go.cjs` 來同步設定。
 
 5.  **自動更新前端設定檔：**
-    > 執行完部署腳本後，回到**視窗三**（前端應用的終端機），並執行以下指令。此指令會自動將最新的合約地址與 ABI 複製到前端專案中。
+    > **重要操作：** 在**視窗二**中每次重新部署完智能合約後，請務必回到**視窗三**（前端終端機），並執行以下指令。此指令會自動讀取最新的部署資訊，並將合約地址與 ABI 檔案複製到前端專案的正確位置。
     ```bash
     node go.cjs
     ```
@@ -85,4 +87,5 @@
     npm run dev
     ```
     > **提示：** 啟動成功後，您會在終端機看到前端網站的本地網址，通常是 `http://localhost:5173`。請在瀏覽器中開啟此網址以與應用程式互動。 
-    **注意** 不要執行node go.cjs，可能會覆蓋掉其他檔案
+    
+**注意** 舊有的 `go.cjs` 相關警告可以忽略，此腳本現在是推薦使用的標準流程。
