--- a/專案啟動說明.md
+++ b/專案啟動說明.md
@@ -30,7 +30,7 @@
 1.  開啟第二個終端機視窗。
 2.  進入 Solidity 專案目錄：
     ```bash
-    cd /c/政大/資訊科技創新期末專案/Solidity/edu-support
+    cd /c/自己存放的path/Solidity/edu-support
     ```
 3.  安裝或更新智能合約的相依套件：
     ```bash
@@ -65,7 +65,7 @@
 1.  開啟第三個終端機視窗。
 2.  進入前端專案目錄：
     ```bash
-    cd /c/政大/資訊科技創新期末專案/Web/edu-support-app
+    cd /c/自己存放的path/Web/edu-support-app
     ```
 3.  安裝所有定義在 `package.json` 中的前端相依套件：
     ```bash
